Button in assigncourse, datatable in view receipt added

--- a/views/assignCourse.ejs
+++ b/views/assignCourse.ejs
@@ -91,14 +91,14 @@
                                 </li>
                                 <% } %>
                         </ul>
+                    </div> 
+                    <div class="input-field">
+                        <button class="submit" type="submit">Submit</button>
                     </div>
                 </section>
                 <% } %>
-                <br>
-                <br>
-                <div class="sub-header">
-                    <button type="submit">Submit</button>
-                </div>
+            
+               
                     
         </form>
 
