--- a/views/feeReciept.ejs
+++ b/views/feeReciept.ejs
@@ -70,13 +70,16 @@
                                     </div>
                                 </li>
                                 <% } %>
+                                <li class="table-row">
+                                    <div class="col col-2" style="font-size:20px; font-weight: 600;" data-label="Student ID">
+                                        Total amount
+                                    </div>
+                                    <div class="col col-3" style="font-size:20px; color:green; font-weight: 600;" data-label="Name">
+                                        <%= totalAmount %>
+                                    </div>
+                                </li>
                     </ul>
 
-                    <div class="sub-header">
-                        <h4>
-                            Total amount in Rs : <%= totalAmount %>
-                        </h4>
-                    </div>
                 </form>
 
 
