--- a/views/addSemester.ejs
+++ b/views/addSemester.ejs
@@ -30,19 +30,24 @@
         <div class="header">
             <h2>Add Semester</h2>
         </div>
-        <div class="sub-header">
-            <h5> 
-                Step - 1
-            </h5>
-        </div>
         <section class="home-section">
             <div class="table-container">
             <div></div>
                 <form action="/addSemester" method="post" class="form">
-                    <div class="col-md-6 form-group mb-3">
-                        <label for="semester" class="col-form-label" style="font-size: 20px;">Semester</label>
-                    <input type="text" class="form-control" placeholder="Name" name="name" >
-                </div>
+                    <ul class="table-responsive-lg">
+                    <div class="row">
+                        <div class="col-md-4 form-group mb-3">
+                        <div class="data-container" style="margin-top: 5%;">
+                            <p class="textfield" style="font-size:22px"><strong>Step1 </strong></p>
+                        </div>
+                         </div>
+                        
+                        <div class="col-md-7 form-group mb-3">
+                            <label for="semester" class="col-form-label" style="font-size: 20px;">Semester</label>
+                        <input type="text" class="form-control" placeholder="Name" name="name" >
+                    </div>
+                     </div>
+                     </ul>
                     <ul class="table-responsive-lg">
                         <li class="thead-dark">
                             <div class="col col-1">SR No</div>
