--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -82,7 +82,7 @@
                     </div>
                     <div class="name-job">
                         <div class="profile_name">
-                            Admin Name
+                            Administration
                         </div>
                         <div class="job">
                             Dean Ap
