--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
 }
 
 .header h2,h1, input{
+    font-weight: 600;
     font-family: 'Spartan', sans-serif;
     margin-left: 29%;
     margin-top: 5%;
@@ -303,8 +304,8 @@
 }
 
 .sidebar .profile-details img {
-    height: 52px;
-    width: 52px;
+    height: 50px;
+    width: 50px;
     object-fit: cover;
     border-radius: 16px;
     margin: 0 14px 0 12px;
@@ -325,7 +326,7 @@
 }
 
 .bx-log-out{
-  font-size: 28px !important;
+  font-size: 26px !important;
   
 }
 
@@ -338,8 +339,6 @@
     transition: all 0.5s ease;
     padding: 12px;
 }
-
-
 
 .attedance-logo i {
     padding-left: 5px;
