--- a/views/gradeSemester.ejs
+++ b/views/gradeSemester.ejs
@@ -60,7 +60,7 @@
                                     <%= courseAssignment[i].courseAssigned.credits %>
                                 </div>
                                 <div class="col col-6" data-label="Name">
-                                    <button type='submit' name="x"
+                                    <button class="view-btn" type='submit' name="x"
                                         value="<%= courseAssignment[0].semesterAssigned.id + " " + courseAssignment[i].courseAssigned.id + " " + courseAssignment[i].programAssigned.id + " " + signal%>">Select</button>
                                 </div>
                             </li>
