--- a/views/instructorSemester.ejs
+++ b/views/instructorSemester.ejs
@@ -42,7 +42,7 @@
                                     <%= semester[i].name %>
                                 </div>
                                 <div class="col col-3" data-label="Name">
-                                    <button type='submit' name="x" value="<%= semester[i].id %>">Select</button>
+                                    <button class="view-btn" type='submit' name="x" value="<%= semester[i].id %>">Select</button>
                                 </div>
                             </li>
                             <% } %>
