--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/error.jpg" alt="Error image">
+    <img style="width:700px;" src="img/error.jpg" alt="Error image">
 </body>
 </html>
