--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -29,7 +29,7 @@
                     <div class="form h-100">
                         <h3> Faculty Registration Form</h3>
                         <form action="/instructorDetails" class="mb-5" method="post" id="contactForm"
-                            name="contactForm">
+                            name="contactForm" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="col-md-12 form-group mb-3">
                                     <label for="" class="col-form-label">Full Name *</label>
@@ -71,7 +71,7 @@
                             <div class="row">
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="mobileno" class="col-form-label">Mobile No. *</label>
-                                    <input type="text" class="form-control" name="mobile-no" id="mobile-no"
+                                    <input type="text" class="form-control" name="moblieNO" id="mobile-no"
                                         placeholder="000-000-0000">
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
@@ -84,7 +84,7 @@
 
                             <div class="col-md-12 form-group mb-3">
                                 <label for="pmail" class="col-form-label">Personal E-mail</label>
-                                <input type="email" class="form-control" name="p-mail" id="p-mail"
+                                <input type="email" class="form-control" name="myemail" id="p-mail"
                                     placeholder="Personal E-mail">
                             </div>
 
