--- a/views/assignCourse.ejs
+++ b/views/assignCourse.ejs
@@ -79,7 +79,7 @@
                                     </div>
                                     <div class="col col-5" data-label="Name">
                                         <select name="courseAssigned" id="">
-                                            <option value="Select" selected>Select</option>
+                                            <option value="Select" selected required>Select</option>
 
                                             <% for (var k=0; k <instructor.length; k++) { %>
 
