--- a/views/forgotPasswordAdmin.ejs
+++ b/views/forgotPasswordAdmin.ejs
@@ -24,8 +24,8 @@
                     <div class="input-box">
                         <header>Forgot password</header>
                         <div class="input-field">
-                            <input type="text" class="input" id="email" name="email"  autocomplete="off">
-                            <label for="username">Username</label>
+                            <input type="text" class="input" id="email" name="email"  autocomplete="off" required>
+                            <label for="username">User Email</label>
                         </div>
                         <div class="input-field">
                             <input type="submit" class="submit" value="Send Verifiction">
