--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -72,7 +72,7 @@
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="mobileno" class="col-form-label">Mobile No. *</label>
                                     <input type="text" class="form-control" name="moblieNO" id="mobile-no"
-                                        placeholder="000-000-0000">
+                                        placeholder="000-000-0000" required>
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="cmail" class="col-form-label">College E-mail *</label>
@@ -93,12 +93,12 @@
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="New-Password" class="col-form-label">New Password *</label>
                                     <input type="password" class="form-control" name="password" id="password"
-                                        placeholder="Enter Password">
+                                        placeholder="Enter Password" required>
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="Confirm-Password" class="col-form-label">Confirm Password *</label>
                                     <input type="password" class="form-control" name="repassword" id="repassword"
-                                        placeholder="Enter password">
+                                        placeholder="Enter password" required>
                                 </div>
                             </div>
 
