--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -32,17 +32,17 @@
                                 <div class="col-md-4 form-group mb-3">
                                     <label for="" class="col-form-label">First Name *</label>
                                     <input type="text" class="form-control" name="firstname" id="name"
-                                        placeholder="First Name">
+                                        placeholder="First Name" required>
                                 </div>
                                 <div class="col-md-4 form-group mb-3">
-                                    <label for="" class="col-form-label">Middle Name *</label>
+                                    <label for="" class="col-form-label">Middle Name</label>
                                     <input type="text" class="form-control" name="middlename" id="email"
-                                        placeholder="Middle Name">
+                                        placeholder="Middle Name" >
                                 </div>
                                 <div class="col-md-4 form-group mb-3">
-                                    <label for="" class="col-form-label">Last Name *</label>
+                                    <label for="" class="col-form-label">Last Name</label>
                                     <input type="text" class="form-control" name="lastname" id="email"
-                                        placeholder="Last Name">
+                                        placeholder="Last Name" required>
                                 </div>
                             </div>
                             <div class="row">
@@ -80,7 +80,7 @@
                             <div class="row">
                                 <div class="col-lg-4 form-group mb-3">
                                     <label for="bloodGroup" class="col-form-label">Blood Group*</label>
-                                    <select class="form-control custom-select" id="bloodGroup" name="bloodGroup">
+                                    <select class="form-control custom-select" id="bloodGroup" name="bloodGroup" required>
                                         <option class="b3" selected disabled hidden>
                                             Select
                                         </option>
@@ -129,7 +129,7 @@
 
                                 <div class="col-md-6 date">
                                     <label for="dob" class="col-form-label">Date of Birth *</label>
-                                    <input class="form-control input-dob" type="date" id="dob" name="dob">
+                                    <input class="form-control input-dob" type="date" id="dob" name="dob" required>
                                 </div>
                             </div>
                             <br>
@@ -140,7 +140,7 @@
                                 <div class="col-md-12 form-group mb-3">
                                     <label for="mobileno" class="col-form-label">Mobile No. *</label>
                                     <input type="text" class="form-control" name="mobileNO" id="mobileNO"
-                                        placeholder="000-000-0000">
+                                        placeholder="000-000-0000" required>
                                 </div>
                             </div>
 
@@ -158,7 +158,7 @@
                                 <div class="col-md-12 form-group mb-3">
                                     <label for="ppmail" class="col-form-label">Parent E-mail *</label>
                                     <input type="email" class="form-control" name="parentEmail" id="parentEmail"
-                                        placeholder="Parent E-mail">
+                                        placeholder="Parent E-mail" required>
                                 </div>
                                 <div class="col-md-12 form-group mb-3">
                                     <label for="address" class="col-form-label">Address *</label>
@@ -171,12 +171,12 @@
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="New-Password" class="col-form-label">New Password *</label>
                                     <input type="password" class="form-control" name="password" id="password"
-                                        placeholder="Enter Password">
+                                        placeholder="Enter Password" required>
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="Confirm-Password" class="col-form-label">Confirm Password *</label>
                                     <input type="password" class="form-control" name="repassword" id="repassword"
-                                        placeholder="Enter password">
+                                        placeholder="Enter password" required>
                                 </div>
                             </div>
                             <div class="form-row">
