--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-/* html { overflow-y: scroll; } */
+html { overflow-y: scroll; }
 * {
     font-family: 'Poppins', sans-serif;
 }
