--- a/views/addAdmin.ejs
+++ b/views/addAdmin.ejs
@@ -31,13 +31,13 @@
                            
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="cmail" class="col-form-label">Admin E-mail *</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Email ID">
+                                    <input type="email" class="form-control" name="email" placeholder="Email ID" required>
                                 </div>
                          
                             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="New-Password" class="col-form-label">Password *</label>
-                                    <input type="password" class="form-control" name="password" placeholder="Password">
+                                    <input type="password" class="form-control" name="password" placeholder="Password" required>
                                 </div>
                           
                                 <div class="input-field">
