--- a/views/addBranch.ejs
+++ b/views/addBranch.ejs
@@ -29,7 +29,7 @@
             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Branch" class="col-form-label">Branch Name </label>
-                                    <input type="text" class="form-control" placeholder="Branch name" name="name">
+                                    <input type="text" class="form-control" placeholder="Branch name" name="name" required>
                             
                                     
                                 </div>
