--- a/views/addComplain.ejs
+++ b/views/addComplain.ejs
@@ -31,7 +31,7 @@
             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Branch" class="col-form-label">Complain </label>
-                                    <input type="text" class="form-control" name="complain" id="complain" placeholder="Complain">       
+                                    <input type="text" class="form-control" name="complain" id="complain" placeholder="Complain" required>       
                                 </div>
                          
                                 <div class="input-field">
