--- a/views/addCourse.ejs
+++ b/views/addCourse.ejs
@@ -28,11 +28,11 @@
             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Coursename" class="col-form-label">Course Name </label>
-                                    <input type="text" class="form-control" placeholder="Name" name="name">      
+                                    <input type="text" class="form-control" placeholder="Name" name="name" required>      
                                 </div>
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Coursename" class="col-form-label">Course Code </label>
-                                    <input type="text" class="form-control" placeholder="Code" name="code">   
+                                    <input type="text" class="form-control" placeholder="Code" name="code" required>   
                                 </div>
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Coursename" class="col-form-label">Description </label>
