--- a/views/addDegree.ejs
+++ b/views/addDegree.ejs
@@ -28,7 +28,7 @@
             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Coursename" class="col-form-label">Degree Name </label>
-                                    <input type="text" class="form-control" placeholder="Degree name" name="name">     
+                                    <input type="text" class="form-control" placeholder="Degree name" name="name" required>     
                                 </div>
                                 
                          
