--- a/views/addGrade.ejs
+++ b/views/addGrade.ejs
@@ -98,15 +98,15 @@
                                         <div class="col col-4" data-label="Name">
                                             <% if (signal=="1" ) { %>
                                                 <input type="number" name="grades" max="10" min="0" step="1"
-                                                    value="<%= gradeStudents[i].grade %>" placeholder="0" style="font-size:15px; height:25px;">
+                                                    value="<%= gradeStudents[i].grade %>" placeholder="0" style="font-size:15px; height:25px;" required>
                                                 <% } else { %>
                                                     <input type="number" name="grades" max="100" min="0"
                                                         value="<%= gradeStudents[i].attendance %>"
-                                                        placeholder="00" style="font-size:15px; height:25px;">
+                                                        placeholder="00" style="font-size:15px; height:25px;" required>
                                                     <% } %>
 
                                                         <input type="hidden" name="student"
-                                                            value="<%= gradeStudents[i].studentEnrolled.id %>" style="font-size:15px; height:25px;">
+                                                            value="<%= gradeStudents[i].studentEnrolled.id %>" style="font-size:15px; height:25px;" required>
                                         </div>
                                     </li>
                                     <% } %>
