--- a/views/addInstructor.ejs
+++ b/views/addInstructor.ejs
@@ -28,11 +28,11 @@
             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Instructorname" class="col-form-label">Instructor Name </label>
-                                    <input type="text" class="form-control" name="fullname" placeholder="Full name">
+                                    <input type="text" class="form-control" name="fullname" placeholder="Full name" required>
                                 </div>                              
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Instructoremail" class="col-form-label">Instructor Email </label>
-                                    <input type="email" class="form-control" name="email" placeholder="College Email ID">
+                                    <input type="email" class="form-control" name="email" placeholder="College Email ID" required>
                                 </div>
                                 
                          
