--- a/views/addStudent.ejs
+++ b/views/addStudent.ejs
@@ -28,7 +28,7 @@
                                 <div class="col-lg-12 form-group mb-3">
 
                                     <label for="Studentemail" class="col-form-label">Student Email </label>
-                                    <input type="email" class="form-control" name="email" placeholder="Student Email ID">
+                                    <input type="email" class="form-control" name="email" placeholder="Student Email ID" required>
                                 </div>
                                 
                          
