--- a/views/forgotPasswordStudent.ejs
+++ b/views/forgotPasswordStudent.ejs
@@ -21,7 +21,7 @@
                         <header  >Forgot Password</header>
                         <div class="input-field">
                             <input type="text" class="input" id="username" name="email"  autocomplete="off">
-                            <label for="username">Email</label>
+                            <label for="username">User Email</label>
                         </div>
                         <div class="input-field">
                             <input type="submit" class="submit" value="Send Verifiction">
