--- a/views/passwordInstructor.ejs
+++ b/views/passwordInstructor.ejs
@@ -31,13 +31,13 @@
                            
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="New-Password" class="col-form-label">New Password *</label>
-                                    <input type="password" class="form-control" name="password" placeholder="New password">
+                                    <input type="password" class="form-control" name="password" placeholder="New password" required>
                                 </div>
                          
                             
                                 <div class="col-lg-12 form-group mb-3">
                                     <label for="Conform-new-Password" class="col-form-label">Confirm New Password *</label>
-                                    <input type="password" class="form-control" name="repassword" placeholder="Confirm new password">
+                                    <input type="password" class="form-control" name="repassword" placeholder="Confirm new password" required>
                                 </div>
                           
                                 <div class="input-field">
