Complain box status design updated

--- a/views/myComplains.ejs
+++ b/views/myComplains.ejs
@@ -58,9 +58,9 @@
                                     </div>
                                     <div class="col col-4" data-label="Batch">
                                         <% if ( complains[i].status ) { %>
-                                            <%= "Resolved" %>
+                                            <p style="color:green">Resolved</p>
                                                 <% } else { %>
-                                                    <%= "Pending" %>
+                                                    <p style="color:red">Pending</p>
                                                         <% } %>
                                     </div>
                                 </li>
