--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -47,16 +47,23 @@
                                 <td><%= result[0].studentEnrolled.studentID %></td>
                             </tr>
                             <tr>
-                                <% if (count==6 && signal=="1") { %>
-                                    <% spi /=6 %>
+                                <% var spi=0,cnt=0,tot_cred=0 %>
+                                   <% for (var i=0; i <result.length; i++) { %>
+                                    <% if (signal=="1" && result[i].grade) { %>
+                                            <% spi +=result[i].grade*result[i].courseEnrolled.credits %>
+                                            <% tot_cred +=result[i].courseEnrolled.credits %>
+                                                <% cnt++ %>
+                                    <% } %>
+                                <% } %>
+                                
+                                <th><strong>SPI </strong></th>
+                                <% if (cnt==6 && signal=="1") { %>
+                                    <% spi /=tot_cred %>
                                         <% spi=Math.round(spi * 100) / 100 %>
-                                            <th><strong>SPI </strong></th>
                                             <td><%= spi %></td>
-                
                                             <% } else if (signal=="1") { %>
-                                                <th><strong>SPI </strong></th>
                                                 <td style="color:red;">Not Declared</td>
-                                                <% } %>
+                                            <% } %>
                             </tr>
                            
                         </table>
@@ -73,7 +80,7 @@
                                 <% } %>
                     </li>
 
-                    <% var spi=0,count=0 %>
+                    <% var count=0 %>
                         <% for (var i=0; i <result.length; i++) { %>
 
                         <li class="table-row">
@@ -93,7 +100,6 @@
                                 <div class="col col-5" data-label="Branch">
                                     <% if (result[i].grade) { %>
                                         <%= result[i].grade %>
-                                            <% spi +=result[i].grade %>
                                                 <% count++ %>
                                                     <% } else { %>
                                                         -
@@ -111,25 +117,24 @@
                             
                         </li>
                         <% } %>
+
+                       
                 </ul>
-                
-            </form>
-            <% if (count==6 && signal=="1") { %>
-                <div class="input-field">
-                        <button class="submit" type="submit" name="result"
-                            value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
-                        </div>
-                        <% } else if (signal=="1") { %>
-                            <div class="input-field">
-                            <button class="submit" disabled type="submit" name="result"
+                <% if (count==6 && signal=="1") { %>
+                    <div class="input-field">
+                            <button class="submit" type="submit" name="result"
                                 value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
-                            <% } %>
-                        </div>
+                            </div>
+                            <% } else if (signal=="1") { %>
+                                <div class="input-field">
+                                <button disabled class="submit" disabled type="submit" name="result"
+                                    value="<%= result[0].semesterEnrolled.id + " " + result[0].studentEnrolled.id + " " + tuple[1]%>">Download</button>
+                                </div>
+                                <% } %>
+            </form>
 
         </div>
     </section>
 
 
 </body>
-
-</html>
