--- a/views/semesterResults.ejs
+++ b/views/semesterResults.ejs
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/table.css" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Semester Details</title>
 </head>
 
