--- a/views/updateStudent.ejs
+++ b/views/updateStudent.ejs
@@ -21,6 +21,8 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/form.css" />
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Student dashboard</title>
   </head>
   <body>
