--- a/views/addAdmin.ejs
+++ b/views/addAdmin.ejs
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/form.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <title>Add admin</title>
 </head>
 
