--- a/views/addCourse.ejs
+++ b/views/addCourse.ejs
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/form.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Add Course</title>
 </head>
 <body>
