--- a/views/addSemester.ejs
+++ b/views/addSemester.ejs
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/table.css" />
     <link rel="stylesheet" href="/css/form.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <style>
         .form-control{
             margin-left: 7%;
