--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/styleadminlogin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Admin Login</title>
 </head>
 
