--- a/views/instructorDetails.ejs
+++ b/views/instructorDetails.ejs
@@ -9,6 +9,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/form.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Welcome Instructor</title>
 </head>
 
