--- a/views/instructorLogin.ejs
+++ b/views/instructorLogin.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/stylefacultylogin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Student Login</title>
 </head>
 <body>
