--- a/views/myComplains.ejs
+++ b/views/myComplains.ejs
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     <title>Complain Box</title>
 </head>
 
