--- a/views/support.ejs
+++ b/views/support.ejs
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/support.css"> 
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
+
     
 </head>
 <body>
