Course credit field add

--- a/views/addCourse.ejs
+++ b/views/addCourse.ejs
@@ -37,6 +37,10 @@
                                     <input type="text" class="form-control" placeholder="Code" name="code" required>   
                                 </div>
                                 <div class="col-lg-12 form-group mb-3">
+                                    <label for="Coursecredit" class="col-form-label">Course Credit </label>
+                                    <input type="text" class="form-control" placeholder="Credits" name="credits" required>   
+                                </div>
+                                <div class="col-lg-12 form-group mb-3">
                                     <label for="Coursename" class="col-form-label">Description </label>
                                     <input type="text" class="form-control" placeholder="Description" name="description"> 
                                 </div>
