Remove required field

--- a/views/addProgram.ejs
+++ b/views/addProgram.ejs
@@ -30,7 +30,7 @@
                     <div class="col-lg-9 form-group mb-3">
                         <label for="program" class="col-form-label" style="font-size:20px">Degree</label>
                         <select class="custom-select form-control" name="degree" id="degree" required>
-                            <option class="form-control" value="select" selected disabled required>Select</option>
+                            <option class="form-control" value="select" selected disabled>Select</option>
 
                             <% for (var i=0; i <degree.length; i++) { %>
                                 <option class="form-control" value="<%= degree[i].id %>">
