Remove required field

--- a/views/addProgram.ejs
+++ b/views/addProgram.ejs
@@ -48,7 +48,7 @@
                     <div class="col-lg-9 form-group mb-3">
                         <label for="program" class="col-form-label" style="font-size:20px">Branch</label>
                     <select class="custom-select form-control" name="branch" id="branch" required>
-                        <option class="form-control" value="Select" selected disabled required>Select</option>
+                        <option class="form-control" value="Select" selected disabled >Select</option>
 
                         <% for (var i=0; i <branch.length; i++) { %>
                             <option value="<%= branch[i].id %>">
