Remove required field

--- a/views/addProgram.ejs
+++ b/views/addProgram.ejs
@@ -92,7 +92,7 @@
                                         <%= course[i].credits %>
                                     </div>
                                     <div class="col col-5" data-label="Branch">
-                                        <input style="accent-color:black; transform:scale(1.5);" type="checkbox" id="" name="course" value="<%= course[i].id %>" required><span
+                                        <input style="accent-color:black; transform:scale(1.5);" type="checkbox" id="" name="course" value="<%= course[i].id %>"><span
                                             class="checkmark"></span>
                                     </div>
                                 </li>
